Fix misalignment with Event List Summaries

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -282,7 +282,7 @@ $left-gutter: 64px;
 
 .mx_EventTile:not([data-layout=bubble]).mx_EventTile_info .mx_EventTile_line,
 .mx_GenericEventListSummary:not([data-layout=bubble]) > :not(.mx_EventTile) .mx_EventTile_avatar ~ .mx_EventTile_line {
-    padding-left: calc($left-gutter + 18px);
+    padding-left: $left-gutter;
 }
 
 .mx_GenericEventListSummary:not([data-layout=bubble]) .mx_EventTile_line {
